--- a/src/stylesheets/pages/_mixins.scss
+++ b/src/stylesheets/pages/_mixins.scss
@@ -17,25 +17,3 @@
     transform : scale(1);
   }
 }
-
-@mixin centralizeFlex () {
-  display: flex;
-  & > div {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-  }
-  & > div:first-child > span { margin-right: auto; }
-
-  & > div:last-child  > span { margin-left: auto;  }
-
-  & > .centralize-child {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-  }
-
-  & > .centralize-child:first-child > span { margin-right: auto; }
-
-  & > .centralize-child:last-child  > span { margin-left: auto;  }
-}
